--- a/src/main/resources/egovframework/egovProps/globals.properties
+++ b/src/main/resources/egovframework/egovProps/globals.properties
@@ -116,13 +116,15 @@ CNTC.INSTTCODE.INFO.userid   = USERID
 CNTC.INSTTCODE.INFO.userpw   = ******
 
 # \ud30c\uc77c \uc5c5\ub85c\ub4dc \uacbd\ub85c(\uacbd\ub85c \uc124\uc815\uc740 \ubc18\ub4dc\uc2dc \uc808\ub300\uacbd\ub85c\ub97c \uc0ac\uc6a9\ud574\uc57c\ud568, \uacbd\ub85c \ub4a4\uc5d0 /\ub97c \ubd99\uc5ec \uc8fc\uc5b4\uc57c\ud568.)
-Globals.fileStorePath =  F:/workspace/gntbsc/src/main/webapp/egovframework/upload/
+# Globals.fileStorePath =  F:/workspace/gntbsc/src/main/webapp/egovframework/upload/
+Globals.fileStorePath =  /egovframework/upload/
 
 # \ud30c\uc77c \ub3d9\uae30\ud654 \ucef4\ud3ec\ub10c\ud2b8\uc5d0\uc11c \uc0ac\uc6a9\ud560 \ud30c\uc77c \uc5c5\ub85c\ub4dc \uacbd\ub85c(\uacbd\ub85c \uc124\uc815\uc740 \ubc18\ub4dc\uc2dc \uc808\ub300\uacbd\ub85c\ub97c \uc0ac\uc6a9\ud574\uc57c\ud568, \uacbd\ub85c \ub4a4\uc5d0 /\ub97c \ubd99\uc5ec \uc8fc\uc5b4\uc57c\ud568.)
 Globals.SynchrnServerPath = F:/workspace/gntbsc/src/main/webapp/egovframework/
 
 # for JFile properties
-system.uploadpath = F:/workspace/gntbsc/src/main/webapp/egovframework/upload/
+# system.uploadpath = F:/workspace/gntbsc/src/main/webapp/egovframework/upload/
+system.uploadpath = /egovframework/upload/
 no.image.url = /resources/jfile/swfupload/images/no_img.gif
 ftp.server.ip = 
 ftp.user.id = 
