--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .idea\
 target\
+classes
 ### Java template
 # Compiled class file
 *.class
@@ -234,3 +235,4 @@ local.properties
 # Typically, this file would be tracked if it contains build/dependency configurations:
 #.project
 
+/src/main/webapp/WEB-INF/jsp/egovframework/gntbsc/main/sub02_01.jsp
